* Update .gitmodules file

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "python3_examples"]
 	path = python3_examples
-	url = git@github.com:alejandrogm90/python3_examples.git
+	url = https://github.com/alejandrogm90/python3_examples.git
 [submodule "ssh_examples"]
 	path = ssh_examples
-	url = git@github.com:alejandrogm90/ssh_examples.git
+	url = https://github.com/alejandrogm90/ssh_examples.git
